--- a/docs/assets/styles/screen_styles.css
+++ b/docs/assets/styles/screen_styles.css
@@ -3,12 +3,12 @@
 	--system-color-softBlue: hsl(252, 94%, 67%);
 	--system-color-lightBlue: hsl(252, 100%, 73%);
 	--system-color-softRed: hsl(0, 80%, 63%);
-	--system-color-lightRed: hsl(0, 10%0, 80%);
+	--system-color-lightRed: hsl(0, 100%, 80%);
 	--system-color-limeGreen: hsl(160, 67%, 52%);
 	--system-color-pureOrange: hsl(34, 90%, 69%);
 	--system-color-grayishBlue: hsl(231, 20%, 27%);
 	--system-color-lightGrayishBlue: hsl(231, 67%, 99%);
-	--system-color-darkBlue: hsl(231, 28% 7);
+	--system-color-darkBlue: hsl(231, 28%, 7%);
 	--system-color-lightPurple: hsl(231, 73%, 93%);
 	--system-color-softPurple: hsl(231, 37%, 63%);
 	--system-color-darkPurple: hsl(233, 31%, 17%);
@@ -30,6 +30,8 @@
 	--system-text-body: 0.8125rem;
 	--system-color-disabled: var(--color-disabled, hsla(233, 31%, 17%, 0.6));
   --invoice-grid: "ref . name" ".  .   ." 1rem "date . status" "total . status" / 1fr .5fr 1fr;
+
+  --system-theme-clip: var(--theme-clip, url(#night_mode))
 }
 @font-face {
   font-family: "Spartan";
@@ -85,6 +87,7 @@
   --fill-items-box: #252946;
   --fill-amount-box: #0d0f17;
   --color-disabled: rgba(251,251,254,0.6);
+  --theme-clip: url("#light_mode");
 }
 
 @supports(font-size: 1cqi) {
@@ -161,6 +164,7 @@ section {
 }
 [class*="btn"] {
   --radius: 1.5rem;
+  --space: 0.25em;
   font-weight: 900;
   text-transform: capitalize;
   font-size: clamp(0.75em, 4cqi, 1em);
@@ -225,20 +229,20 @@ label {
   --icon-transform: var(--hover-transform, inherit);
   color: var(--color-text-hover, var(--system-color-lightBlue));
 }
-[data-icon] {
-  display: inline-flex;
-  flex-flow: var(--i-flow, row nowrap);
-  gap: var(--items-space, 0.5em);
-  align-items: center;
-}
 [data-icon]:disabled {
   --deco-fill: currentColor;
   opacity: 0.6;
   color: var(--system-color-disabled);
 }
+[data-icon]::before,
+[data-icon]::after {
+  content: "";
+  display: inline-block;
+  flex-shrink: 0;
+}
 [data-icon="arrow_right"] {
   --icon-transform: rotate(180deg);
-  --i-flow: row-reverse nowrap;
+  --row-dir: row-reverse;
   --hover-transform: rotate(180deg) translateX(0.5em);
 }
 [data-icon="arrow_left"] {
@@ -246,7 +250,6 @@ label {
 }
 :is([data-icon="arrow_left"],
 [data-icon="arrow_right"])::before {
-  content: "";
   inline-size: 1.5rem;
   aspect-ratio: 1;
   background-color: var(--deco-fill, var(--icon-fill, var(--system-color-softBlue)));
@@ -259,7 +262,6 @@ label {
   cursor: pointer;
 }
 [data-icon="arrow_down"]::after {
-  content: "";
   inline-size: 1em;
   aspect-ratio: 0.6;
   background-color: var(--deco-fill, var(--system-color-softBlue));
@@ -273,11 +275,16 @@ label {
   --min-padding: 0.75em clamp(0.5em, 2vw, 1.5em) 0.75em 0.5em;
 }
 [data-icon="add-circle"]::before {
-  content: "";
   inline-size: 2em;
   aspect-ratio: 1;
   background-color: var(--deco-fill, currentColor);
   clip-path: url("#add-circle");
+}
+[data-icon="warning"]::before {
+  inline-size: 1.5em;
+  aspect-ratio: 1;
+  background-color: var(--deco-fill, currentColor);
+  clip-path: url("#warning");
 }
 [data-status="pending"] {
   --status-fill: var(--system-color-pureOrange);
@@ -311,6 +318,9 @@ label {
 }
 .grow-2 {
   flex-grow: 2;
+}
+.no-shrink {
+  flex-shrink: 0;
 }
 .segragator {
   flex-flow: var(--direction, row) var(--wrap, nowrap);
@@ -364,7 +374,7 @@ label {
   border-radius: 1.25em 0 1.25em 0;
 }
 #status-form {
-  --min-padding: 1.5em;
+  --min-padding: clamp(0.5em, 4vi, 1.5em);
   font-weight: bold;
   border-radius: 0.5em;
   box-shadow: 0 4px 8px 0 var(--system-color-shadow);
@@ -372,7 +382,7 @@ label {
   position: absolute;
   inset-block-start: 110%;
   inset-inline: -20%;
-  min-inline-size: 12rem;
+  min-inline-size: min(12rem, 50vi);
   z-index: 1;
   opacity: 0;
 }
@@ -419,12 +429,20 @@ label {
   margin: 0;
   opacity: 0;
 }
+.theme-switch:is(:focus,
+:hover) {
+  --icon-fill: var(--system-color-lightPurple);
+}
 .theme-switch {
   border-inline-end: 1px solid var(--system-color-grayishBlue);
 }
-.theme-switch:hover,
-.theme-switch:focus {
-  --icon-fill: var(--system-color-lightPurple);
+.theme-switch::before {
+  content: "";
+  display: inline-block;
+  inline-size: 32px;
+  aspect-ratio: 1;
+  background-color: var(--icon-fill, currentColor);
+  clip-path: var(--system-theme-clip);
 }
 .banner {
   --alignment: stretch;
@@ -513,17 +531,16 @@ label {
   --min-padding: var(--status-padding);
   --color-text: var(--status-text, inherit);
   --color-fill: var(--status-fill, inherit);
+  display: inline-flex;
+  align-items: center;
+  gap: 0.25em;
   text-transform: capitalize;
   font-weight: bold;
-  display: inline-flex;
-  flex-flow: var(--i-flow, row nowrap);
-  gap: var(--items-space, 0.5em);
-  align-items: center;
 }
 .status-box::before {
   content: "";
   display: inline-block;
-  inline-size: 0.5rem;
+  inline-size: 0.5em;
   aspect-ratio: 1;
   background-color: var(--deco-fill, currentColor);
   border-radius: 50%;
@@ -655,7 +672,6 @@ date-picker [disabled] {
 }
 date-picker [data-action="previous month"]::before,
 date-picker [data-action="next month"]::before {
-  content: "";
   inline-size: 1.5rem;
   aspect-ratio: 1;
   background-color: var(--deco-fill, var(--system-color-softBlue));
@@ -737,12 +753,15 @@ date-picker .actions {
   inset: var(--inset-before, auto 0 calc(0.85em - 1px));
   background-image: var(--deco-img, linear-gradient(var(--gradient-dir, to right), var(--deco-color) calc(50% - 0.85em - 2px), transparent 0 calc(50% + 0.85em + 2px), var(--deco-color) 0));
 }
-noscript {
+noscript[data-status] {
   --min-padding: 1em;
   --radius: 0.5em;
+  --color-text: var(--status-text, currentColor);
+  --color-text-hover: var(--system-color-darkPurple);
+  --space: 0.5em;
   margin-block-start: 0.5em;
   margin-inline: 0.5em;
-  display: block;
+  background-color: var(--system-color-lightRed);
 }
 @media screen and (min-width: 480px) {
   :root {
@@ -834,7 +853,7 @@ noscript {
   body {
     --y-offset: 0px;
     display: grid;
-    grid-template: "nav . . ." 72px "nav . main ." calc(100lvb - 72px)/72px 1fr minmax(clamp(688px, 60vi, 719px), 2.5fr) 1fr;
+    grid-template: "nav . . ." 72px "nav . main ." calc(100lvb - 72px)/72px 1fr minmax(clamp(618px, 60vi, 719px), 2.5fr) 1fr;
   }
   body > main {
     grid-area: main;
@@ -860,5 +879,6 @@ noscript {
     --fill-items-box: #252946;
     --fill-amount-box: #0d0f17;
     --color-disabled: rgba(251,251,254,0.6);
+    --theme-clip: url("#light_mode");
   }
 }
